# WolfAgents

./: .dockerignore  .env.example  .gitignore  Dockerfile  FIX_REPORT.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  task.md
backend/: __init__.py  api_server.py  config.py  game_service.py  main.py
backend/analysis/: __init__.py  __main__.py  agents.py  log_parser.py  pipeline.py  report_template.py  schemas.py
backend/core/: __init__.py  game_engine.py  game_logger.py  human_game.py  knowledge_base.py  utils.py
backend/models/: __init__.py  roles.py  schemas.py
backend/prompts/: __init__.py  game_prompts.py  role_prompts.py
data/analysis_reports/: report_demo.html
frontend/: env.template  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.vue  index.css  main.js
frontend/src/components/: AgentCard.vue  GameFeed.vue  Header.vue  PlayerActions.vue  RoomView.vue
frontend/src/config/: constants.js
frontend/src/hooks/: useFeedProcessor.js
frontend/src/router/: index.js
frontend/src/services/: websocket.js
frontend/src/styles/: global.css
frontend/src/user/: UserGameView.vue  api.js
frontend/src/views/: GameView.vue  LoginView.vue
static/: players_experience_20251209_160624_glm-4.5-air.json  players_experience_20251209_224853_glm-4.5-air.json  players_experience_20251210_150049_glm-4.6.json  players_experience_20251210_185315_glm-4.5-air.json  players_experience_20251210_194324_glm-4.5-air.json
(+5 files in other folders)
